Modify: fix jwt login